--- a/hunter-transform/build.gradle
+++ b/hunter-transform/build.gradle
@@ -12,32 +12,29 @@ dependencies {
 }
 
 repositories {
-    maven {
-        url uri('../repo')
-    }
     google()
     jcenter()
     mavenCentral()
 }
 
 ext {
-    bintrayRepo = 'maven'
+    bintrayRepo = 'EasyHunter'
     bintrayName = 'hunter-transform'
 
-    publishedGroupId = 'com.quinn.hunter'
+    publishedGroupId = 'com.weikaiyun.EasyHunter'
     libraryName = 'hunter-transform'
     artifact = 'hunter-transform'
 
     libraryDescription = 'A fast, incremental, cocurrent framework to develop compile plugin for android project'
 
-    siteUrl = 'https://github.com/Leaking/Hunter'
-    gitUrl = 'https://github.com/Leaking/Hunter.git'
+    siteUrl = 'https://github.com/weikaiyun/EasyHunter'
+    gitUrl = 'https://github.com/weikaiyun/EasyHunter.git'
 
-    libraryVersion = '1.1.0'
+    libraryVersion = '1.0.0'
 
-    developerId = 'Leaking'
-    developerName = 'QuinnChen'
-    developerEmail = 'chenhuazhaoao@gmail.com'
+    developerId = 'weikaiyun'
+    developerName = 'weikaiyun'
+    developerEmail = 'wky19900505@gmail.com'
 
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
@@ -46,18 +43,3 @@ ext {
 
 apply from: '../script/installv1.gradle'
 apply from: '../script/bintrayv1.gradle'
-
-//apply plugin: 'maven'
-//
-//group='com.quinn.hunter'
-//version='1.0.0'
-//
-//def localRepoURL = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
-//
-//uploadArchives {
-//    repositories {
-//        mavenDeployer {
-//            repository(url: localRepoURL)
-//        }
-//    }
-//}
