--- a/hunter-debug-plugin/build.gradle
+++ b/hunter-debug-plugin/build.gradle
@@ -29,7 +29,7 @@ ext {
     libraryName = 'hunter-debug-plugin'
     artifact = 'hunter-debug-plugin'
 
-    libraryDescription = 'A fast, incremental, cocurrent framework to develop compile plugin for android project'
+    libraryDescription = 'A fast, incremental, concurrent framework to develop compile plugin for android project'
 
     siteUrl = 'https://github.com/weikaiyun/EasyHunter'
     gitUrl = 'https://github.com/weikaiyun/EasyHunter.git'
