--- a/hunter-linelog-plugin/build.gradle
+++ b/hunter-linelog-plugin/build.gradle
@@ -28,7 +28,7 @@ ext {
     libraryName = 'hunter-linelog-plugin'
     artifact = 'hunter-linelog-plugin'
 
-    libraryDescription = 'A fast, incremental, cocurrent framework to develop compile plugin for android project'
+    libraryDescription = 'A fast, incremental, concurrent framework to develop compile plugin for android project'
 
     siteUrl = 'https://github.com/weikaiyun/EasyHunter'
     gitUrl = 'https://github.com/weikaiyun/EasyHunter.git'
