--- a/hunter-transform/build.gradle
+++ b/hunter-transform/build.gradle
@@ -25,7 +25,7 @@ ext {
     libraryName = 'hunter-transform'
     artifact = 'hunter-transform'
 
-    libraryDescription = 'A fast, incremental, cocurrent framework to develop compile plugin for android project'
+    libraryDescription = 'A fast, incremental, concurrent framework to develop compile plugin for android project'
 
     siteUrl = 'https://github.com/weikaiyun/EasyHunter'
     gitUrl = 'https://github.com/weikaiyun/EasyHunter.git'
