--- a/hunter-debug-example/build.gradle
+++ b/hunter-debug-example/build.gradle
@@ -26,8 +26,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.quinn.hunter:hunter-debug-library:0.9.6'
-    implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation 'com.weikaiyun.EasyHunter:hunter-debug-library:1.0.0'
 }
 
 repositories {
@@ -43,8 +42,8 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.quinn.hunter:hunter-debug-plugin:1.1.0'
-        classpath 'com.quinn.hunter:hunter-transform:1.1.0'
+        classpath 'com.weikaiyun.EasyHunter:hunter-debug-plugin:1.0.0'
+        classpath 'com.weikaiyun.EasyHunter:hunter-transform:1.0.0'
     }
 }
 
