--- a/hunter-linelog-example/build.gradle
+++ b/hunter-linelog-example/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.quinn.hunter:hunter-linelog-library:0.8.6'
+    implementation 'com.weikaiyun.EasyHunter:hunter-linelog-library:1.0.0'
 }
 
 repositories {
@@ -42,8 +42,8 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.quinn.hunter:hunter-linelog-plugin:1.1.0'
-        classpath 'com.quinn.hunter:hunter-transform:1.1.0'
+        classpath 'com.weikaiyun.EasyHunter:hunter-linelog-plugin:1.0.0'
+        classpath 'com.weikaiyun.EasyHunter:hunter-transform:1.0.0'
     }
 }
 
