--- a/hunter-okhttp-example/build.gradle
+++ b/hunter-okhttp-example/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.weikaiyun.EasyHunter:hunter-okhttp-library:1.0.1'
 }
