--- a/hunter-timing-example/build.gradle
+++ b/hunter-timing-example/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.weikaiyun.EasyHunter:hunter-timing-library:1.0.0'
 }
