--- a/hunter-timing-example/build.gradle
+++ b/hunter-timing-example/build.gradle
@@ -30,17 +30,15 @@ dependencies {
     implementation 'com.weikaiyun.EasyHunter:hunter-timing-library:1.0.0'
 }
 
-repositories {
-    jcenter()
-    google()
-    mavenLocal()
-}
-
 buildscript {
     repositories {
+        repositories {
+            maven {
+                url  "https://dl.bintray.com/weikaiyun/EasyHunter"
+            }
+        }
         jcenter()
         google()
-        mavenLocal()
     }
     dependencies {
         classpath 'com.weikaiyun.EasyHunter:hunter-timing-plugin:1.0.2'
