--- a/hunter-debug-example/build.gradle
+++ b/hunter-debug-example/build.gradle
@@ -26,19 +26,19 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.weikaiyun.EasyHunter:hunter-debug-library:1.0.0'
+    implementation 'com.weikaiyun.SHunter:hunter-debug-library:1.0.0'
 }
 
 buildscript {
     repositories {
         maven {
-            url  "https://dl.bintray.com/weikaiyun/EasyHunter"
+            url  "https://dl.bintray.com/weikaiyun/SHunter"
         }
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.weikaiyun.EasyHunter:hunter-debug-plugin:1.0.5'
+        classpath 'com.weikaiyun.SHunter:hunter-debug-plugin:1.0.5'
     }
 }
 
