--- a/hunter-okhttp-library/build.gradle
+++ b/hunter-okhttp-library/build.gradle
@@ -27,17 +27,17 @@ dependencies {
 }
 
 ext {
-    bintrayRepo = 'EasyHunter'
+    bintrayRepo = 'SHunter'
     bintrayName = 'hunter-okhttp-library'
 
-    publishedGroupId = 'com.weikaiyun.EasyHunter'
+    publishedGroupId = 'com.weikaiyun.SHunter'
     libraryName = 'hunter-okhttp-library'
     artifact = 'hunter-okhttp-library'
 
     libraryDescription = 'A fast, incremental, concurrent framework to develop compile plugin for android project'
 
-    siteUrl = 'https://github.com/weikaiyun/EasyHunter'
-    gitUrl = 'https://github.com/weikaiyun/EasyHunter.git'
+    siteUrl = 'https://github.com/weikaiyun/SHunter'
+    gitUrl = 'https://github.com/weikaiyun/SHunter.git'
 
     libraryVersion = '1.0.1'
 
