--- a/hunter-timing-library/build.gradle
+++ b/hunter-timing-library/build.gradle
@@ -28,14 +28,14 @@ ext {
     bintrayRepo = 'EasyHunter'
     bintrayName = 'hunter-timing-library'
 
-    publishedGroupId = 'com.weikaiyun.EasyHunter'
+    publishedGroupId = 'com.weikaiyun.SHunter'
     libraryName = 'hunter-timing-library'
     artifact = 'hunter-timing-library'
 
     libraryDescription = 'A fast, incremental, concurrent framework to develop compile plugin for android project'
 
-    siteUrl = 'https://github.com/weikaiyun/EasyHunter'
-    gitUrl = 'https://github.com/weikaiyun/EasyHunter.git'
+    siteUrl = 'https://github.com/weikaiyun/SHunter'
+    gitUrl = 'https://github.com/weikaiyun/SHunter.git'
 
     libraryVersion = '1.0.0'
 
