--- a/hunter-okhttp-plugin/build.gradle
+++ b/hunter-okhttp-plugin/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     implementation 'org.ow2.asm:asm-util:7.1'
     //noinspection GradleDependency
     implementation 'org.ow2.asm:asm-commons:7.1'
-    implementation 'com.weikaiyun.EasyHunter:hunter-transform:1.0.5'
+    implementation 'com.weikaiyun.SHunter:hunter-transform:1.0.0'
 }
 
 ext {
@@ -27,7 +27,7 @@ ext {
     siteUrl = 'https://github.com/weikaiyun/SHunter'
     gitUrl = 'https://github.com/weikaiyun/SHunter.git'
 
-    libraryVersion = '1.0.5'
+    libraryVersion = '1.0.0'
 
     developerId = 'weikaiyun'
     developerName = 'weikaiyun'
